--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: simple-web
-        image: tonysimpleweb:latest  
+        image: nginx:latest  
         ports:
         - containerPort: 80
